# AlphaPFN

./: .gitignore  LICENSE  README.md  pyproject.toml
alphapfn/: __init__.py  _fetch.py  api.py  checkpoints.py  data.py  loader.py  utils.py
alphapfn/model/: bar_distribution.py  encoders.py  layer.py  layer_norm.py  mlp.py  multi_head_attention.py  transformer.py
alphapfn/priors/: __init__.py  alphapfn_model.py  base_model.py  prior.py  utils.py
alphapfn/training/: __init__.py  _esmodel_stub.py  buckets.py  gp_precompute.py  prior_data_loader.py  train.py
examples/: bo_with_optimize_acqf.py
model_training/: README.md  export_checkpoints.py  train.py
model_training/slurm/: slurm_train_alpha.sh  slurm_train_alpha_all.sh  slurm_train_ppd.sh
plot_results/: README.md  plot_from_csv.py
plots_results/: plot_from_csv.py
