[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alphapfn"
version = "0.0.1"
authors = [
    {name = "ML Freiburg"},
]
description = "Fast Entropy Search via In-Context Learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.2,<2.0",
    "einops",
    "networkx",
    "gpytorch>=1.5.0",
    "safetensors",
    "typing_extensions",
    "packaging",
    "platformdirs",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
botorch = ["botorch>=0.15.0"]
training = ["tqdm", "cloudpickle", "scipy"]

[tool.hatch.build]
exclude = [
    "*.gz",
    "*.pt",
]

[tool.hatch.build.targets.wheel]
packages = ["alphapfn"]
